--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -1,4 +1,9 @@
 {
+  "username": "Username",
+  "password": "Password",
+  "dont have an account?": "Don't have an account?",
+  "register here": "Register here",
+  "register": "Register",
   "lights": "Lights",
   "on": "On",
   "off": "Off"
